[package]
name = "preemptive-threads"
version = "0.6.0"
edition = "2021"
rust-version = "1.70"
authors = ["Nathan Ryver <tantaouisoftware@gmail.com>"]
description = "Bare-metal preemptive multithreading for Raspberry Pi Zero 2 W (ARM Cortex-A53)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NathanVRyver/preemptive-threads"
keywords = ["threading", "no-std", "raspberry-pi", "bare-metal", "arm64"]
categories = ["no-std", "os", "embedded", "concurrency"]
readme = "README.md"
documentation = "https://docs.rs/preemptive-threads"

[dependencies]
portable-atomic = { version = "1.0", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "lazy", "once"] }

[features]
default = ["full-fpu"]
# Enable NEON/FPU context save/restore (recommended for most use cases)
full-fpu = []
# Enable std compatibility layer for host testing
std-shim = []
# Target QEMU virt machine instead of real Pi hardware
# Use this for full preemption testing in QEMU (GIC works on virt, not on raspi3b)
qemu-virt = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"  # Optimize for size

# Bare-metal example kernel
[[example]]
name = "rpi_kernel"
path = "examples/rpi_kernel.rs"
